# hs-reasoner

./: .gitignore  .hlint.yaml  LICENSE  README.md  default.nix  hs-reasoner.cabal  release.nix  shell.nix  start-tmux
app/: Main.hs
src/: EffectsExample.hs  Logic.hs
src/HsReasoner/: Logic.hs  PrettyPrinter.hs  Tableau.hs  Tableaux.hs  Types.hs  Utils.hs
test/: LogicSpec.hs  TableauSpec.hs  TableauxSpec.hs  TestSuite.hs  TypesSpec.hs  UtilsSpec.hs
test/res/: TestOntology.owl
